tests/ui/borrowck/borrowck-mut-slice-of-imm-vec.stderr
error[E0596]: cannot borrow `v` as mutable, as it is not declared as mutable
  --> $DIR/borrowck-mut-slice-of-imm-vec.rs:7:11
   |
LL |     write(&mut v);
   |           ^^^^^^ cannot borrow as mutable
   |
help: consider changing this to be mutable
   |
LL |     let mut v = vec![1, 2, 3];
   |         +++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0596`.
